Details
-
Bug
-
Resolution: Fixed
-
Critical
Description
Happened on testbot just now. Timo, can you have a look whether it's related to your recent changes? Thanks.
https://reactos.org/sites/all/modules/reactos/testman/detail.php?id=19345315&prev=19344603
*** Fatal System Error: 0x00000050
|
(0xE14F5002,0x00000000,0xF8548B3B,0x00000000)
|
|
|
Driver at fault:
|
|
|
*** win32k.sys - Address F8548B3B base at F84B1000, DateStamp 54ef69c9
|
|
|
.
|
[7h
|
Entered debugger on embedded INT3 at 0x0008:0x8095f258.
|
kdb:>
|
bt
|
Eip:
|
<NTOSKRNL.EXE:15f259 (:0 (RtlpBreakWithStatusInstruction))>
|
Frames:
|
<NTOSKRNL.EXE:971ad (ntoskrnl/ke/bug.c:1098 (KeBugCheckWithTf))>
|
<NTOSKRNL.EXE:976b6 (ntoskrnl/ke/bug.c:1423 (KeBugCheckEx))>
|
<NTOSKRNL.EXE:c1dec (ntoskrnl/mm/ARM3/pagfault.c:1841 (MmArmAccessFault))>
|
<NTOSKRNL.EXE:f6a2b (ntoskrnl/mm/mmfault.c:243 (MmAccessFault))>
|
<NTOSKRNL.EXE:146de9 (ntoskrnl/ke/i386/traphdlr.c:1274 (KiTrap0EHandler))>
|
<NTOSKRNL.EXE:3698 (:0 (KiTrap0E))>
|
<win32k.sys:97b36 (win32ss/gdi/ntgdi/dibobj.c:1996 (DIB_FreeConvertedBitmapInfo))>
|
<win32k.sys:986ad (win32ss/gdi/ntgdi/dibobj.c:997 (GreGetDIBitsInternal))>
|
<win32k.sys:98863 (win32ss/gdi/ntgdi/dibobj.c:1076 (NtGdiGetDIBitsInternal))>
|
<NTOSKRNL.EXE:147970 (ntoskrnl/include/internal/i386/ke.h:689 (KiSystemServiceHandler))>
|
<NTOSKRNL.EXE:3d95 (:0 (KiFastCallEntry))>
|
<ntdll.dll:c771 (:0 (KiIntSystemCall))>
|
<gdi32_apitest.exe:1e4f3 (modules/rostests/apitests/gdi32/GetDIBits.c:196 (Test_GetDIBits))>
|
<gdi32_apitest.exe:206f8 (modules/rostests/apitests/gdi32/GetDIBits.c:439 (func_GetDIBits))>
|
<gdi32_apitest.exe:37425 (include/reactos/wine/test.h:614 (main))>
|
<gdi32_apitest.exe:37f96 (lib/sdk/crt/startup/crtexe.c:310 (__tmainCRTStartup))>
|
<gdi32_apitest.exe:37ff8 (lib/sdk/crt/startup/crtexe.c:196 (mainCRTStartup))>
|
<kernel32.dll:fc03 (dll/win32/kernel32/client/proc.c:472 (BaseProcessStartup))>
|
<00000000>
|
kdb:>
|
Attachments
Issue Links
- blocks
-
CORE-10380 Use special pool for win32k allocations
-
- Open
-
- relates to
-
CORE-11474 Random failures and timeouts on testbot due to memory corruption
-
- Open
-