[WIN32K] - GreGetDIBitsInternal: - Prevent an access violation in DIB_FreeConvertedBitmapInfo by initializing the bit count before calling DIB_ConvertBitmapInfo and setting clrUsed. - Validate input parameters and return correct values - only return number of scan lines if bits are not null and bpp is not zero. Otherwise return 1 on success. - We now pass more gdi32:GetDIBits and gdi32:bitmap tests. CORE-9270

svn path=/trunk/; revision=74046